--- a/environment.yml
+++ b/environment.yml
@@ -7,12 +7,17 @@ dependencies:
   - _tflow_select=2.3.0=mkl
   - absl-py=0.13.0=pyhd3eb1b0_0
   - astor=0.8.0=py27_0
+  - atomicwrites=1.4.0=py_0
+  - attrs=21.2.0=pyhd3eb1b0_0
   - backports=1.0=pyhd3eb1b0_2
   - backports.weakref=1.0.post1=py_1
   - blas=1.0=openblas
   - c-ares=1.17.1=h27cfd23_0
-  - ca-certificates=2021.7.5=h06a4308_1
+  - ca-certificates=2021.10.26=h06a4308_2
   - certifi=2020.6.20=pyhd3eb1b0_3
+  - configparser=4.0.2=py27_0
+  - contextlib2=0.6.0.post1=pyhd3eb1b0_0
+  - docutils=0.15.2=py27_0
   - enum34=1.1.6=py27_1
   - funcsigs=1.0.2=py27_0
   - futures=3.3.0=py27_0
@@ -20,6 +25,7 @@ dependencies:
   - grpcio=1.27.2=py27hf8bcb03_0
   - h5py=2.9.0=py27h7918eee_0
   - hdf5=1.10.4=hb1b8bf9_0
+  - importlib_metadata=1.3.0=py27_0
   - keras-applications=1.0.8=py_1
   - keras-preprocessing=1.1.0=py_1
   - libffi=3.3=he6710b0_2
@@ -33,19 +39,30 @@ dependencies:
   - linecache2=1.0.0=py_1
   - markdown=3.1.1=py27_0
   - mock=3.0.5=py27_0
+  - more-itertools=5.0.0=py27_0
   - ncurses=6.2=he6710b0_1
   - nomkl=3.0=0
   - numpy=1.16.6=py27h30dfecb_0
   - numpy-base=1.16.6=py27h2f8d375_0
   - openssl=1.1.1l=h7f8727e_0
+  - packaging=20.9=pyhd3eb1b0_0
+  - pathlib2=2.3.5=py27_0
   - pip=19.3.1=py27_0
+  - pluggy=0.13.1=py27_0
   - protobuf=3.11.2=py27he6710b0_0
+  - py=1.10.0=pyhd3eb1b0_0
+  - py-cpuinfo=8.0.0=pyhd3eb1b0_1
+  - pyparsing=2.4.7=pyhd3eb1b0_0
+  - pytest=4.6.2=py27_0
+  - pytest-benchmark=3.2.2=py27_0
   - python=2.7.18=ha1903f6_2
   - readline=8.1=h27cfd23_0
+  - scandir=1.10.0=pyh5d7bf9c_3
   - scipy=1.2.1=py27he2b7bc3_0
   - setuptools=44.0.0=py27_0
   - six=1.16.0=pyhd3eb1b0_0
   - sqlite=3.36.0=hc218d9a_0
+  - statistics=1.0.3.5=py_1002
   - tensorboard=1.13.1=py27hf484d3e_0
   - tensorflow=1.13.1=mkl_py27h74ee40f_0
   - tensorflow-base=1.13.1=mkl_py27h7ce6ba3_0
@@ -55,7 +72,9 @@ dependencies:
   - tqdm=4.62.2=pyhd3eb1b0_1
   - traceback2=1.4.0=py27_0
   - unittest2=1.1.0=py27_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
   - werkzeug=1.0.1=pyhd3eb1b0_0
   - wheel=0.37.0=pyhd3eb1b0_1
+  - zipp=0.6.0=py_0
   - zlib=1.2.11=h7b6447c_3
 prefix: /home/gselzer/miniconda3/envs/sudoku
